Finish documentation on the generate population functions; typo check everything

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,27 +5,36 @@ export(AddShift)
 export(AddSnakeBarriers)
 export(CardinalDirections)
 export(DefineParameters)
+export(Emigrate)
+export(Extinction)
 export(GeneratePhonemeProbabilities)
 export(GenerateSeedLanguage)
 export(GetAMutation)
 export(GetASplitShiftJoinMut)
 export(GetFactorDim)
+export(GetImmigrants)
 export(GetRealPhonemeData)
+export(GetTerritory)
 export(HCBSimmulation)
 export(HoritontalTransferRepeater)
 export(HorizontalTransfer)
 export(Initialize)
 export(Lose)
 export(MakeLanguage)
+export(MakePopulation)
 export(Migration)
 export(NextStepDirections)
 export(NextWave)
 export(OneStepDirections)
+export(PopulationGrowth)
 export(RemoveHorizontalConnections)
 export(RemoveVerticalConnections)
+export(ResetPopulation)
 export(ShiftDirections)
 export(StepDirections)
 export(UpdateExistingPhonemes)
+export(UpdateStructuresMove)
+export(UpdateStructuresRemove)
 import(ade4)
 import(mc2d)
 import(numbers)
