Fix ANOTHER Bering typo; it's unberable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(AddBeringStrait)
 export(AddSegment)
 export(AddShift)
 export(AddSnakeBarriers)
-export(BeringStraightPlot)
+export(BeringStraitPlot)
 export(CardinalDirections)
 export(DefineParameters)
 export(Emigrate)
