--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(PopulationPlot)
 export(RemoveHorizontalConnections)
 export(RemoveVerticalConnections)
 export(ResetPopulation)
+export(SaveData)
 export(ShiftDirections)
 export(SnapshotPlot)
 export(StepDirections)
