allow bering striat size to change

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(GeneratePhonemeProbabilities)
 export(GenerateSeedLanguage)
 export(GetAMutation)
 export(GetASplitShiftJoinMut)
+export(GetBering)
 export(GetBeringCoords)
 export(GetDist)
 export(GetFactorDim)
