Add alternator sim and update savedata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(AddBeringStrait)
 export(AddSegment)
 export(AddShift)
 export(AddSnakeBarriers)
+export(Alternator)
 export(BeringStraitPlot)
 export(CardinalDirections)
 export(DefineParameters)
