forgot to document :<

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(GetTerritory)
 export(GetXYCoords)
 export(Getcolors)
 export(GroupBySeed)
+export(HCBAlternatorSimmulation)
 export(HCBSimmulation)
 export(HoritontalTransferRepeater)
 export(HorizontalTransfer)
