fix plots so they work for getgroup and getseedgroup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(GetAMutation)
 export(GetASplitShiftJoinMut)
 export(GetBering)
 export(GetBeringCoords)
+export(GetColorDistribution)
 export(GetDist)
 export(GetFactorDim)
 export(GetGroups)
@@ -23,7 +24,6 @@ export(GetImmigrants)
 export(GetRealPhonemeData)
 export(GetTerritory)
 export(GetXYCoords)
-export(Getcolors)
 export(GroupBySeed)
 export(HCBAlternatorSimmulation)
 export(HCBSimmulation)
